Adiciona card onde será exibida a senha do dia

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,10 @@
 	margin: 0;
 	padding: 0;
 }
+
+.password-of-day {
+	padding-top: 5px;
+}
 .card-title {
 	background-color: #666;
 	padding-top: 15px;
