--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,3 @@
-body{padding-top:10px;padding-right:20px;background-color:#E4E4E4;font-family:Verdana}.no-p-no-m{margin:0;padding:0}.card-title{background-color:#666;padding-top:15px;padding-bottom:15px;color:#fff;margin-bottom:0}
+body{padding-top:10px;padding-right:20px;background-color:#E4E4E4;font-family:Verdana}.no-p-no-m{margin:0;padding:0}.password-of-day{padding-top:5px}.card-title{background-color:#666;padding-top:15px;padding-bottom:15px;color:#fff;margin-bottom:0}
 
 /*# sourceMappingURL=../maps/style.css.map */
