--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,16 +3,31 @@
 
 .no-p-no-m {
 	margin: 0;
-	padding: 0;
+	padding: 0 10px 0 0;
+}
+
+.execucao {
+	font-size: 20px;
 }
 
 .password-of-day {
 	padding-top: 5px;
 }
 .card-title {
-	background-color: #666;
+	background-color: #444;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	color: #fff;
 	margin-bottom: 0;
 }
+
+.row.no-gutter div[class*="col-"] {
+
+}
+
+.row.no-gutter [class*='col-']:not(:first-child),.row.no-gutter [class*='col-']:not(:last-child) {
+	padding-right:0;
+	padding-left:15px;
+}
+
+
